# langgraph-checkpoints-vs-stores

./: .gitignore  .gitlab-ci.yml  Makefile  README-USECASES-EXAMPLE.md  README.md  ULTRAPLAN.md  docker-compose.yml  pyproject.toml  setup_and_run.sh
.github/workflows/: ci.yml
.gitlab/issue_templates/: demo_bug.md
.gitlab/merge_request_templates/: demo_change.md
artifacts/: comparison-matrix.csv  demo-summary.json
artifacts/sample-output/: checkpoint_demo.txt  combined_demo.txt  store_demo.txt
diagrams/: checkpoint-flow.mmd  combined-architecture.mmd  store-flow.mmd
docs/: concepts.md  experiments.md  production-notes.md  references.md  runbook.md
examples/: 01_checkpointer_minimal.py  02_store_minimal.py  03_both_minimal.py
scripts/: generate_artifacts.py
src/checkpoints_vs_stores/: __init__.py  backends.py  chapter2.py  chapter3.py  checkpoint_demo.py  combined_demo.py  demo.py  hitl_demo.py  matrix_demo.py  peek_demo.py  resume_demo.py  search_demo.py  store_demo.py  timetravel_demo.py  utils.py
tests/: conftest.py  test_chapter2.py  test_chapter3.py  test_checkpoint_demo.py  test_combined_demo.py  test_examples.py  test_store_demo.py
